kubernetes/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: pandora-test
  labels:
    app.kubernetes.io/name: http-echo
    app.kubernetes.io/part-of: pandora
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: http-echo
  ports:
    - name: http
      port: 80
      targetPort: http
